infrastructures/k8s/manifests/deployment/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: staging
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      nodePort: 32177
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
